[project]
name = "llm-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "python-dotenv>=1.1.1",
    "transformers>=4.56.1",
    "uvicorn>=0.35.0",
    "fastapi[all]>=0.116.1",
    "bitsandbytes>=0.47.0",
    "accelerate>=1.10.1",
    "peft>=0.15.0",
    "datasets>=3.0.0",
    "trl>=0.9.0",
    "diffusers>=0.37.1",
    "xformers>=0.0.31.post1",
    "triton-windows>=3.7.0.post26",
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

torchvision = [
    {index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

torchaudio = [
    {index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
